# fatira

./: .gitignore  App.js  MwaConnect.js  README.md  app.json  package-lock.json  package.json
backend/: config.example.ts  db.ts  index.ts  package-lock.json  package.json  tsconfig.json
backend/models/: Expense.ts  Group.ts  User.ts
backend/routers/: expense.ts  group.ts  user.ts
backend/utils/: solana.ts
database/: Expense.js  User.js  index.js  package-lock.json  package.json
database/routes/: expense.js  user.js
database/utils/: solana.js
frontend/: AddExpenseScreen.js  App.js  BottomNavBar.js  CreateGroupScreen.js  GroupMainScreen.js  GroupsScreen.js  PhantomConnect.js  ProfilePage.js  SplitExpenseScreen.js  ViewExpenseScreen.js  app.json  color.js  moneyPay.js  package-lock.json  package.json  settingScreen.js
frontend/screens/: Home.js
program/: Anchor.toml  package.json
program/programs/fatira/: Cargo.toml
program/programs/fatira/src/: constants.rs  error.rs  lib.rs  state.rs
program/tests/: fatira.ts
